feat: create and delete promotion endpoint
